#
#
# Install boomlump.wad to /usr/local/share/doom
#

waddir=$(datadir)/games/doom
wad_DATA=prboom.wad
EXTRA_DIST=prboom.wad

#
# $Log: Makefile.am,v $
# Revision 1.2.2.1  2003/07/19 11:40:36  proff_fs
# Removed $Id: $ lines.
# This is for the future switch to subversion.
#
# Revision 1.2  2000/05/18 09:36:11  cph
# Import new data WAD with Boom, MBF and PrBoom stuff
#
# Revision 1.1.1.1  2000/05/04 07:54:32  proff_fs
# initial login on sourceforge as prboom2
#
# Revision 1.1  1999/10/01 08:13:39  cphipps
# Initial revision
#
#
