## Process this file with automake to produce Makefile.in

EXTRA_DIST=config.h i_sound.c LauncherApp.h SDLMain.h \
	UKFileWatcher.h UKKQueue.h UKMainThreadProxy.h \
	UKKQueue.m UKMainThreadProxy.m \
	Image-DS_Store Info.plist i_system.m LauncherApp.m Launcher.icns LauncherMain.m macsupport.rb Makefile.am PrBoom.icns PrBoom.sdef Rakefile SDLMain.m TODO \
	English.lproj/MainMenu.nib/classes.nib English.lproj/MainMenu.nib/info.nib English.lproj/MainMenu.nib/keyedobjects.nib

