## Process this file with automake to produce Makefile.in

EXTRA_DIST = ANSIString.h \
	ANSIString.m \
	config.h \
	ConsoleController.h \
	ConsoleController.m \
	DrawerButton.h \
	DrawerButton.m \
	English.lproj/MainMenu.nib/classes.nib \
	English.lproj/MainMenu.nib/info.nib \
	English.lproj/MainMenu.nib/keyedobjects.nib \
	FileButtonController.h \
	FileButtonController.m \
	Image-DS_Store \
	Info.plist \
	i_sound.m \
	i_system.m \
	LauncherApp.h \
	LauncherApp.m \
	Launcher.icns \
	LauncherMain.m \
	macsupport.rb \
	Makefile.am \
	PrBoom.icns \
	PrBoom.sdef \
	Rakefile \
	ResolutionDataSource.h \
	ResolutionDataSource.m \
	SDLMain.h \
	SDLMain.m \
	TODO \
	UKFileWatcher.h \
	UKKQueue.h \
	UKKQueue.m \
	UKMainThreadProxy.h \
	UKMainThreadProxy.m \
	WadViewController.h \
	WadViewController.m
