#
#
#

CFLAGS = @CFLAGS@ @SDL_CFLAGS@

noinst_LIBRARIES = libdoommusic.a

libdoommusic_a_SOURCES = \
 dbopl.c \
 dbopl.h \
 dumbplayer.c \
 dumbplayer.h \
 flplayer.c \
 flplayer.h \
 madplayer.c \
 madplayer.h \
 midifile.c \
 midifile.h \
 opl.c \
 opl.h \
 oplplayer.c \
 oplplayer.h \
 opl_queue.c \
 opl_queue.h \
 portmidiplayer.c \
 portmidiplayer.h \
 vorbisplayer.c \
 vorbisplayer.h \
 musicplayer.h
