#
# Copyright (C) 2000 by Colin Phipps (cph@lxdoom.linuxgames.com)
# License: GPL

CFLAGS = @CFLAGS@ @SDL_CFLAGS@

noinst_LIBRARIES = libsdldoom.a

libsdldoom_a_SOURCES = \
 i_main.c       i_network.c     i_video.c       i_sound.c \
 i_system.c     i_joy.c         i_sshot.c

EXTRA_DIST = SDL_windows_main.c
